Fix Java AppHost for Aspire 13.4.6: default package + waitFor ordering
- Removed 'package aspire;' declaration from AppHost.java
- Added 'import aspire.*;' to access generated bindings
- Added api.waitFor(pg) for explicit startup ordering
- Prevents ClassNotFoundException and cold-start race conditions
- Verified with launcher's exact javac command
- Updated Thor history, created decision doc, extracted skill

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>